# blog

./: .editorconfig  .env  Cargo.toml  README.md  build.rs  db.sql
activitypub/: Cargo.toml
activitypub/src/: activities.rs  actor.rs  finger.rs  http_signatures.rs  inbox.rs  main.rs  outbox.rs  utils.rs
admin/: Cargo.toml
admin/src/: account.rs  activitypub.rs  comments.rs  common.rs  dashboard.rs  filters.rs  generator.rs  links.rs  main.rs  media.rs  page.rs  post.rs  prepublished.rs  response.rs  session.rs  settings.rs  tags.rs  templates.rs  types.rs  utils.rs
analytics/: Cargo.toml
analytics/src/: main.rs
atproto/: Cargo.toml
atproto/src/: bsky.rs  main.rs
db/: initial.sql
db/migrations/: 202305170001_add_drafts.sql  202305200001_add_comments.sql  202305300001.sql  202306040001_add_analytics.sql  202306050001_add_pages.sql  202306060001_add_media.sql  20230624001_add_activitypub_tables.sql  20230624002_more_actor_fields.sql  202306250001_activitypub_outbox.sql  202306250002_more_outbox.sql  202306250003_defaults.sql  202306260001_more_actor_columns.sql  202307020001_add_processed_flag.sql  202307020002_add_activitypub_message_feed.sql  202307070001_activitypub_actor_extras.sql  202307090001_add_emotion.sql  202307220001_likes_and_summaries.sql  20230805001_add_categories.sql  202402130001_multiple_sites.sql  202402160001_missing_tables_etc.sql  202402160002_per_site_followers.sql  202402200001_actor_bigint.sql  202403100001_update_access_logs.sql  202502270001_add_templates.sql  202503030001_template_indexes.sql  202504070001_blog_editions.sql  202504070002_blog_post_datetime.sql  202507120001_bsky.sql
migrations/: Cargo.toml  build.rs
migrations/src/: main.rs
public/: Cargo.toml
public/src/: main.rs
shared/: Cargo.toml
shared/src/: activities.rs  database.rs  errors.rs  lib.rs  referencing.rs  session.rs  settings.rs  types.rs  utils.rs
shared/src/generator/: activitypub.rs  feeds.rs  filters.rs  index.rs  mod.rs  month_index.rs  pages.rs  posts.rs  static_content.rs  templates.rs  types.rs  year_index.rs
src/: account.rs  comments.rs  dashboard.rs  database.rs  filters.rs  generator.rs  links.rs  main.rs  migrate.rs  post.rs  public.rs  session.rs  settings.rs  types.rs  utils.rs
static/: admin.css  blog.css
templates/: 400.html  404.html  500.html  account.html  activitypub_feed.html  activitypub_send_post.html  base.html  comment_list.html  dashboard.html  delete_template.html  edit_page.html  edit_post.html  edit_template.html  index.html  links.html  login.html  manage_pages.html  manage_posts.html  media.html  new_page.html  new_post.html  page_form.html  post_form.html  settings.html  tags.html  templates.html
