[workspace]
members = [
	"public",
	"shared",
	"migrations",
	"admin"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3       # Optimize for size
lto = 'thin'
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
