[workspace]
members = [
	"public",
	"shared",
	"migrations",
	"admin",
	"analytics",
	"activitypub"
]


[workspace.dependencies]
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono"] }
anyhow = {version = "1.0.70", features=["backtrace"]}
askama = { version = "0.12.0" }
cgi = "0.6.0"
chrono = { version = "0.4.24", features = ["clock", "serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde-querystring = "0.2.1"
serde_json = "1.0.97"
http = "0.2.9"
ordinal = "0.3.2"
num-traits = "0.2.15"
pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
chrono-tz = "0.8.2"
ammonia = "3.3.0"
tokio = "1.29.1"
rustls = "0.21.1"
lazy_static = "1.4.0"
uuid = { version = "1.3.1", features = ["v4"] }
thiserror = "1.0"
url = { version = "2.4.0", features = ["serde"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3       # Optimize for size
lto = 'thin'
