[package]
name = "activitypub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

anyhow = "1.0.71"
async-std = "1.12.0"
cgi = "0.6.0"
chrono = { version = "0.4.26", features = ["serde"] }
rustls = "0.21.1"
serde = { version = "1.0.164", features = ["derive"] }
serde-querystring = "0.2.1"
sqlx = { version = "0.6.3", features = ["postgres", "json", "chrono", "runtime-async-std-rustls", "uuid"] }
serde_json = "1.0.97"
