[package]
name = "activitypub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

anyhow = { workspace = true }
tokio = { workspace = true }
cgi = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true  }
serde-querystring = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }

ureq = { version = "2.7.1", features = ["tls", "json"] }
rsa = { version = "0.9.2", features = ["sha2"] }
rand = "0.8.5"
base64 = "0.21.2"
