[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

anyhow = "1.0.70"
askama = { version = "0.12.0" }
async-std = "1.12.0"
bcrypt = "0.14.0"
cgi = "0.6.0"
chrono = { version = "0.4.24", features = ["clock", "serde"] }
http = "0.2.9"
itertools = "0.10.5"
num-traits = "0.2.15"
ordinal = "0.3.2"
regex = "1.8.1"
serde = { version = "1.0.159", features = ["derive"] }
serde-querystring = "0.2.1"
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-async-std-rustls", "json", "uuid", "chrono", "migrate"] }
time = { version = "0.3.20", features = ["serde", "parsing", "formatting"] }
uuid = { version = "1.3.1", features = ["v4"] }
multer = "2.1.0"
futures-util = { version = "0.3.28", default-features = false }
bytes = "1.4.0"
lazy_static = "1.4.0"
image = { version = "0.24.6" }
chrono-tz = "0.8.2"
ammonia = "3.3.0"
