[package]
name = "admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
askama = { workspace = true }
tokio = { workspace = true }
cgi = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
ordinal = { workspace = true }
chrono = { workspace = true  }
http = { workspace = true }
serde-querystring = { workspace = true }
serde_json = { workspace = true }
ammonia = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true }
chrono-tz = { workspace = true }

bcrypt = "0.14.0"
itertools = "0.10.5"
num-traits = "0.2.15"
regex = "1.8.1"
time = { version = "0.3.20", features = ["serde", "parsing", "formatting"] }
multer = "2.1.0"
futures-util = { version = "0.3.28", default-features = false }
bytes = "1.4.0"
image = { version = "0.24.6" }
