[package]
name = "admin"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
askama = { workspace = true }
tokio = { workspace = true }
cgi = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
ordinal = { workspace = true }
chrono = { workspace = true  }
serde-querystring = { workspace = true }
serde_json = { workspace = true }
ammonia = { workspace = true }
lazy_static = { workspace = true }
uuid = { workspace = true }
chrono-tz = { workspace = true }
tera = { workspace = true }

bcrypt = "0.17"
itertools = "0.14"
num-traits = "0.2"
regex = "1.8.1"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
multer = "3"
futures-util = { version = "0.3", default-features = false }
bytes = "1"
image = { version = "0.25" }
