[package]
name = "analytics"
version = "0.1.0"
edition = "2021"
description = "Blog analytics parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.1", features = ["derive", "cargo"] }
lazy_static = "1.4.0"
regex = "1.8.3"
async-std = "1.12.0"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-async-std-rustls", "chrono", "ipnetwork"] }
ipnetwork = "0.20.0"
percent-encoding = "2.2.0"
