[package]
name = "analytics"
version = "0.1.0"
edition = "2021"
description = "Blog analytics parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive", "cargo"] }
regex = "1.8.3"
ipnetwork = "0.20.0"
percent-encoding = "2.2.0"

sqlx = { workspace=true, features=["ipnetwork"] }
chrono = { workspace = true }
tokio = { workspace = true }
lazy_static = { workspace = true }
