[package]
name = "atproto"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
reqwest = { version = "0.12.22", default-features=false, features=["json","rustls-tls","http2","gzip"] }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true  }