[package]
name = "public"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.70"
askama = { version = "0.12.0", features = ["markdown"] }
async-std = "1.12.0"
cgi = "0.6.0"
serde = { version = "1.0.159", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-async-std-rustls", "json", "uuid", "chrono"] }