[package]
name = "public"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
anyhow = { workspace = true }
askama = { workspace = true }
tokio = { workspace = true }
cgi = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
