[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = ["postgres", "runtime-async-std-rustls", "json", "uuid", "chrono"] }
anyhow = "1.0.70"
askama = { version = "0.12.0", features = ["markdown"] }
cgi = "0.6.0"
chrono = { version = "0.4.24", features = ["clock", "serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde-querystring = "0.2.1"
http = "0.2.9"
ordinal = "0.3.2"
num-traits = "0.2.15"