[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace=true }
anyhow = { workspace = true }
askama = { workspace = true }
cgi = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde-querystring = { workspace = true }
http = { workspace = true }
ordinal = { workspace = true }
num-traits = { workspace = true }
pulldown-cmark = { workspace = true }
chrono-tz = { workspace = true }
serde_json = { workspace = true }
ammonia = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
latex2mathml = { workspace = true }